correct z-index on fixed position header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ header {
     background-color: #fff;
     width: 100%;
     position: fixed;
+    z-index: 1;
 }
 
 header div {
